# myai-agent

./: .gitignore  PYPI_SETUP.md  README.md  install.sh  pyproject.toml
src/myai_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  gpu.py  installer.py
