[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myai-agent"
version = "2.0.0"
description = "MyAI GPU compute agent — earn MYAI tokens by sharing your compute power"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []   # zero deps — pure stdlib
license = { text = "MIT" }
keywords = ["myai", "gpu", "compute", "ollama", "crypto", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage    = "https://myaitoken.io"
Repository  = "https://github.com/myaitoken/myai-agent"
"Bug Tracker" = "https://github.com/myaitoken/myai-agent/issues"

[project.scripts]
myai-agent = "myai_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myai_agent"]
